Add 1 additional button

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         <button id="choice2"></button>
         <button id="choice3"></button>
         <button id="choice4"></button>
+        <button id="choice5"></button>
     </div>
     
     
