Support double char mode, update the css to make the UI prettier

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                 <img src="img/{{word}}.png">
             </div>
             
-            <div>
+            <div class="clue-container">
                 <h1 style="font-size: 72px;">{{clue}} </h1>
+                <button id="speakButton">🔊</button> 
             </div>
-            <button id="speakButton">🔊</button> 
             <div ng-hide="!right_indicator">
                 <h1 style="font-size: 72px; color: #468847">✔</h1>
             </div>
