Add count down timer and make the choices lower case

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/angular.min.js"></script>
     <script src="js/jquery.jplayer.min.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
     <script src="words.js"></script>
     <script src="game.js"></script>
     
@@ -62,6 +63,7 @@
     
     <div>
         <center>
+            <div class="digits"></div>
             <div>
                 <img src="img/{{word}}.png">
             </div>
