Update algorithm to avoid duplicate word in the test

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </nav>
     
-    <div>
+    <div id="game-container">
         <center>
             <div class="digits"></div>
             <div>
@@ -81,7 +81,7 @@
         </center>
     </div>
 
-    <div id="game-container">
+    <div id="choice-container">
         <p id="clue"></p>
         <button id="choice1" class="choice-button"></button>
         <button id="choice2" class="choice-button"></button>
