--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
                             <li><a ng-href="#" ng-click="setmode('double')">double letter</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">lesson <span class="caret"></span></a>
+                        <ul id="lesson-menu" class="dropdown-menu" role="menu">
+                            
+                        </ul>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a>{{number_right}} correct / {{number_total}} total</a></li>
